# shop_of_electronic

./: .env-sampel  .flake8  LICENSE  README.md  pyproject.toml
config/: settings.py  urls.py
employee/: admin.py  auth.py  models.py  serializers.py  urls.py  views.py
employee/management/commands/: create_superuser.py
employee/migrations/: 0001_initial.py
factory/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
factory/migrations/: 0001_initial.py
links/: admin.py  models.py  serializers.py  urls.py  views.py
links/migrations/: 0001_initial.py
products/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
retail_network/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
retail_network/migrations/: 0001_initial.py  0002_alter_retail_network_debt.py
