poe[tool.poetry]
name = "shop-of-electronic"
version = "0.1.0"
description = ""
authors = ["Sandi_Navoiy <santes.au@gmail.com>"]
readme = "README.md"
packages = [{include = "shop_of_electronic"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
